--- a/perso.css
+++ b/perso.css
@@ -7,6 +7,11 @@ code mark {
 
 
 .text-hover-image {
+}
+.reveal .text-hover-image {
+    background: black;
+    color: white;
+    opacity: 0.7; 
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.75) !important;
 }
 
