alignements des backgrounds (ajout d'un attribut data-state sur la slide)

--- a/css/theme/source/alptis-dark.scss
+++ b/css/theme/source/alptis-dark.scss
@@ -135,3 +135,8 @@ $selectionBackgroundColor: #7FFF00;
 	left: 20px;
     z-index: 101;
 }
+.reveal .backgrounds {
+    top: 35px;
+    bottom: 0;
+    height: auto;
+}
